--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>爱朵电商 | 支付门店后台系统</title>
+    <title>爱朵电商 | 门店后台系统</title>
   </head>
   <body>
     <noscript>
